--- a/bevhills90210.html
+++ b/bevhills90210.html
@@ -226,11 +226,53 @@ footer {
 <article>
     <h2>My ratings</h2>
     <hr>
-    <p>Beverly Hills 90210</p>
+    <p>Gilmore Girls</p>
 </article>
 </section>
 <footer>
-   
+   <table>
+     <tr>
+        <th onclick="showInfo('Summary', 'bev_summary.txt')">Summary</th>
+        <th onclick="showInfo('Rating & Runtime', 'bev_raterun.txt')">Rating & Runtime</th>
+        <th onclick="showInfo('Main Cast & Crew', 'bev_cast.txt')">Main Cast</th>
+        <th onclick="showInfo('Trivia', 'bev_trivia.txt')">Trivia</th>
+        <th onclick="showInfo('Genre, Theme Song, etc.', 'bev_genrets.txt')">Genre, Theme Song, etc.</th>
+     </tr>
+   </table>
+   <div id="info-box">
+      
+      <hr>
+      <h3><strong>Click one of the rows to see more information about my #8 show: Beverly Hills 90210!</strong></h3>
+      <hr>
+      <img src="https://ww2.kqed.org/app/uploads/sites/12/2017/06/beverly-hills-90210-cast-then-now.jpg">
+   </div>
+
+   <script>
+function showInfo(title, file) {
+    const infoBox = document.getElementById('info-box');
+    infoBox.innerHTML = `<p>Loading ${title}...</p>`;
+    fetch(file)
+      .then(response => {
+        if (!response.ok) {
+          throw new Error(`Could not load ${file}`);
+        }
+        return response.text(); 
+      })
+      .then(data => {
+        infoBox.innerHTML = `
+          <hr>
+          <h2 style="color: #59b69a">${title}</h2>
+          <hr>
+          <h3 style="width: 75%">${data}</h3>
+        `;
+      })
+      .catch(error => {
+        infoBox.innerHTML = `<p>Error loading content: ${error.message}</p>`;
+      });
+}
+</script>
+
 </footer>
 </body>
+
 </html>
