--- a/bevhills90210.html
+++ b/bevhills90210.html
@@ -244,7 +244,7 @@ footer {
       <hr>
       <h3><strong>Click one of the rows to see more information about my #8 show: Beverly Hills 90210!</strong></h3>
       <hr>
-      <img src="https://ww2.kqed.org/app/uploads/sites/12/2017/06/beverly-hills-90210-cast-then-now.jpg">
+      <img src="https://ww2.kqed.org/app/uploads/sites/12/2017/06/beverly-hills-90210-cast-then-now.jpg" style="width: 30%;">
    </div>
 
    <script>
