--- a/friends.html
+++ b/friends.html
@@ -230,7 +230,48 @@ footer {
 </article>
 </section>
 <footer>
-   
+   <table>
+     <tr>
+        <th onclick="showInfo('Summary', 'fr_summary.txt')">Summary</th>
+        <th onclick="showInfo('Rating & Runtime', 'fr_raterun.txt')">Rating & Runtime</th>
+        <th onclick="showInfo('Main Cast & Crew', 'fr_cast.txt')">Main Cast</th>
+        <th onclick="showInfo('Trivia', 'fr_trivia.txt')">Trivia</th>
+        <th onclick="showInfo('Genre, Theme Song, etc.', 'fr_genrets.txt')">Genre, Theme Song, etc.</th>
+     </tr>
+   </table>
+   <div id="info-box">
+      
+      <hr>
+      <h3><strong>Click one of the rows to see more information about my #2 show: Friends!</strong></h3>
+      <hr>
+      <img src="https://m.media-amazon.com/images/M/MV5BZGY5MTgwOGItN2Q5My00MWZhLTkzMWEtYzEzYTZkNjBmN2RiXkEyXkFqcGdeQXNvbG5vbXM@._V1_QL75_UX500_CR0,0,500,281_.jpg" style="width: 30%;">
+   </div>
+
+   <script>
+function showInfo(title, file) {
+    const infoBox = document.getElementById('info-box');
+    infoBox.innerHTML = `<p>Loading ${title}...</p>`;
+    fetch(file)
+      .then(response => {
+        if (!response.ok) {
+          throw new Error(`Could not load ${file}`);
+        }
+        return response.text(); 
+      })
+      .then(data => {
+        infoBox.innerHTML = `
+          <hr>
+          <h2 style="color: #59b69a">${title}</h2>
+          <hr>
+          <h3 style="width: 75%">${data}</h3>
+        `;
+      })
+      .catch(error => {
+        infoBox.innerHTML = `<p>Error loading content: ${error.message}</p>`;
+      });
+}
+</script>
+
 </footer>
 </body>
 </html>
