--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -244,7 +244,7 @@ footer {
       <hr>
       <h3><strong>Click one of the rows to see more information about my #1 show: Gilmore Girls!</strong></h3>
       <hr>
-      <img src="https://dnm.nflximg.net/api/v6/BvVbc2Wxr2w6QuoANoSpJKEIWjQ/AAAAQe8tw0VCGrNoOsmYxN6frjj9etN5NxAhQAEhEvySH7IbiMQV5RkoDy2os0hnShW1ZMAiRjuuwkCfIjCSGOiNWdRGcJq3Xn_FYHnqb9M9hH2W2KUrQ80JqWZ93yvbtE1em1m8432foTW_r3GX56WB37UbNPk.jpg">
+      <img src="https://dnm.nflximg.net/api/v6/BvVbc2Wxr2w6QuoANoSpJKEIWjQ/AAAAQe8tw0VCGrNoOsmYxN6frjj9etN5NxAhQAEhEvySH7IbiMQV5RkoDy2os0hnShW1ZMAiRjuuwkCfIjCSGOiNWdRGcJq3Xn_FYHnqb9M9hH2W2KUrQ80JqWZ93yvbtE1em1m8432foTW_r3GX56WB37UbNPk.jpg" style="width: 30%;">
    </div>
 
    <script>
