--- a/bevhills90210.html
+++ b/bevhills90210.html
@@ -226,7 +226,7 @@ footer {
 <article>
     <h2>My ratings</h2>
     <hr>
-    <p>Gilmore Girls</p>
+    <p>Beverly Hills 90210</p>
 </article>
 </section>
 <footer>
