--- a/newgirl.html
+++ b/newgirl.html
@@ -230,7 +230,48 @@ footer {
 </article>
 </section>
 <footer>
-   
+   <table>
+     <tr>
+        <th onclick="showInfo('Summary', 'ng_summary.txt')">Summary</th>
+        <th onclick="showInfo('Rating & Runtime', 'ng_raterun.txt')">Rating & Runtime</th>
+        <th onclick="showInfo('Main Cast & Crew', 'ng_cast.txt')">Main Cast</th>
+        <th onclick="showInfo('Trivia', 'ng_trivia.txt')">Trivia</th>
+        <th onclick="showInfo('Genre, Theme Song, etc.', 'ng_genrets.txt')">Genre, Theme Song, etc.</th>
+     </tr>
+   </table>
+   <div id="info-box">
+      
+      <hr>
+      <h3><strong>Click one of the rows to see more information about my #6 show: New Girl!</strong></h3>
+      <hr>
+      <img src="https://dnm.nflximg.net/api/v6/BvVbc2Wxr2w6QuoANoSpJKEIWjQ/AAAAQXs76oU0xI4VzY5IetTjU4HNiDEbdaegSIeB2GZigtEYKoxSptoJ7ytBV4XHUYDigcvIa1v2fDaTrLdeFhL1NmrmcInxPUWU20MW7NTZC9VpPzOR4LZpgG9TChIjTfbEQzehEItlt2pVevpRmdx9QGrkAnE.jpg?r=f5b" style="width: 30%;">
+   </div>
+
+   <script>
+function showInfo(title, file) {
+    const infoBox = document.getElementById('info-box');
+    infoBox.innerHTML = `<p>Loading ${title}...</p>`;
+    fetch(file)
+      .then(response => {
+        if (!response.ok) {
+          throw new Error(`Could not load ${file}`);
+        }
+        return response.text(); 
+      })
+      .then(data => {
+        infoBox.innerHTML = `
+          <hr>
+          <h2 style="color: #59b69a">${title}</h2>
+          <hr>
+          <h3 style="width: 75%">${data}</h3>
+        `;
+      })
+      .catch(error => {
+        infoBox.innerHTML = `<p>Error loading content: ${error.message}</p>`;
+      });
+}
+</script>
+
 </footer>
 </body>
 </html>
