--- a/genre-comedy.html
+++ b/genre-comedy.html
@@ -231,7 +231,8 @@ footer {
 </section>
 <footer>
    <h3>Click the link down below to take a look through the greatest comedy television shows of all time!</h3>
-   <h2><strong><a href="https://www.google.com/search?q=best+comedy+tv+shows+of+all+time">Best Comedy TV Shows of all Time</a></strong></h2>
+   <br>
+   <h2><strong><a style="font-size: 20px;" href="https://www.google.com/search?q=best+comedy+tv+shows+of+all+time">Best Comedy TV Shows of all Time</a></strong></h2>
 </footer>
 </body>
 </html>
