--- a/genre-comedy.html
+++ b/genre-comedy.html
@@ -234,7 +234,7 @@ footer {
    <h3>Click the link down below to take a look through the greatest comedy television shows of all time!</h3>
    <br>
    <h2><strong><a style="font-size: 20px;" href="https://www.google.com/search?q=best+comedy+tv+shows+of+all+time">Best Comedy TV Shows of all Time</a></strong></h2>
-   <img href="twig_art.png">
+   <img style="width: 100%;" src="twig_art.png">
 </footer>
 </body>
 </html>
