--- a/genre-family.html
+++ b/genre-family.html
@@ -233,7 +233,7 @@ footer {
    <br>
    <h3>Click the link down below to take a look through the greatest family television shows of all time!</h3>
    <br>
-   <h2><strong><a style="font-size: 20px;" href="https://www.google.com/search?q=best+family+tv+shows+of+all+time">Best Family TV Shows of all Time</a></strong></h2>
+   <h2><strong><a style="font-size: 20px;" href="https://www.google.com/search?q=best+family+tv+shows+of+all+time"target="_blank">Best Family TV Shows of all Time</a></strong></h2>
    <img style="width: 100%;" src="twig_art.png">
 </footer>
 </body>
