--- a/stream-max.html
+++ b/stream-max.html
@@ -230,7 +230,11 @@ footer {
 </article>
 </section>
 <footer>
-   
+   <br>
+   <h3>Click the link down below to take a look through the television shows available on Max!</h3>
+   <br>
+   <h2><strong><a style="font-size: 20px;" href="https://www.google.com/search?q=tv+shows+available+on+max"target="_blank">Max TV Shows</a></strong></h2>
+   <img style="width: 100%;" src="twig_art.png">
 </footer>
 </body>
 </html>
