--- a/showsrank.html
+++ b/showsrank.html
@@ -230,7 +230,11 @@ footer {
 </article>
 </section>
 <footer>
-   
+   <br>
+   <h3>Click the link down below to take a look through the greatest television shows of all time!</h3>
+   <br>
+   <h2><strong><a style="font-size: 20px;" href="https://www.imdb.com/chart/toptv/"target="_blank">Greatest TV Shows of all Time</a></strong></h2>
+   <img style="width: 100%;" src="twig_art.png">
 </footer>
 </body>
 </html>
