--- a/themiddle.html
+++ b/themiddle.html
@@ -40,7 +40,7 @@ table, th, td {
 }
 
 table {
-  width: 90%;
+  width: 95%;
   text-align: center;
   margin: auto;
   color: #275b52;
@@ -237,6 +237,7 @@ footer {
         <th onclick="showInfo('Main Cast & Crew', 'tm_cast.txt')">Main Cast</th>
         <th onclick="showInfo('Trivia', 'tm_trivia.txt')">Trivia</th>
         <th onclick="showInfo('Genre, Theme Song, etc.', 'tm_genrets.txt')">Genre, Theme Song, etc.</th>
+        <th onclick="showInfo('Review', 'tm_review.txt')">Review</th>
      </tr>
    </table>
    <div id="info-box">
