--- a/himym.html
+++ b/himym.html
@@ -10,7 +10,10 @@
     }
 </script>
 <style>
-
+.spoiler {
+         display: none; /* Spoiler is hidden initially */
+}
+    
 .preserve-line-breaks {
   white-space: pre-line;
 }
