--- a/himym.html
+++ b/himym.html
@@ -23,6 +23,21 @@
    }
 </script>
 <style>
+.spoiler {
+         display: none; /* Spoiler is hidden initially */
+}
+.button {
+         padding: 10px 15px;
+         background-color: #59b69a;
+         color: #f2f3f8;
+         border: none;
+         cursor: pointer;
+         border-radius: 5px;
+         font-size: 20px;
+}
+.button:hover {
+         background-color: #621621;
+}
 .preserve-line-breaks {
   white-space: pre-line;
 }
