--- a/himym.html
+++ b/himym.html
@@ -25,6 +25,12 @@
 <style>
 .spoiler {
          display: none; /* Spoiler is hidden initially */
+         background-color: #f9f9f9;
+         color: #59b69a;
+         border: 1px solid #ccc;
+         padding: 10px;
+         margin-top: 10px;
+         border-radius: 5px;
 }
 .button {
          padding: 10px 15px;
