--- a/himym.html
+++ b/himym.html
@@ -12,7 +12,6 @@
       const spoiler = document.getElementById("spoiler");
       const button = document.querySelector(".button");
 
-      // Toggle the visibility of the spoiler
       if (spoiler.style.display === "none" || spoiler.style.display === "") {
          spoiler.style.display = "block";
          button.textContent = "Hide Spoiler";
@@ -24,7 +23,7 @@
 </script>
 <style>
 .spoiler {
-         display: none; /* Spoiler is hidden initially */
+         display: none;
          background-color: #f9f9f9;
          color: #59b69a;
          border: 1px solid #ccc;
