--- a/bevhills90210.html
+++ b/bevhills90210.html
@@ -8,9 +8,23 @@
             document.body.style.backgroundColor = localStorage.getItem("backgroundColor");
         }
     }
+    function toggleSpoiler() {
+      const spoiler = document.getElementById("spoiler");
+      const button = document.querySelector(".button");
+
+      if (spoiler.style.display === "none" || spoiler.style.display === "") {
+         spoiler.style.display = "block";
+         button.textContent = "Spoiler";
+      } else {
+         spoiler.style.display = "none";
+         button.textContent = "Spoiler";
+      }
+   }
 </script>
 <style>
-
+.spoiler {
+    display: none;
+}
 .preserve-line-breaks {
   white-space: pre-line;
 }
