--- a/your-review.html
+++ b/your-review.html
@@ -52,7 +52,7 @@
             }
         });
     </script>
-    <a href="gilmoregirls.html" style="margin-top: 10px; padding: 5px 10px; font-size: 30px;>Back</a>
+    <a href="gilmoregirls.html" style="margin-top: 10px; padding: 5px 10px; font-size: 30px;">Back</a>
 
 </body>
 </html>
