--- a/your-review.html
+++ b/your-review.html
@@ -30,34 +30,36 @@
     </form>
 
     <script>
-        const form = document.getElementById('entryForm');
+    const form = document.getElementById('entryForm');
 
-        form.addEventListener('submit', function(event) {
-            event.preventDefault(); // Prevent page refresh
+    form.addEventListener('submit', function (event) {
+        event.preventDefault(); // Prevent the page refresh
 
-            const entryInput = document.getElementById('entryInput').value;
+        const entryInput = document.getElementById('entryInput').value;
 
-            if (entryInput.trim() !== "") {
-                // Retrieve existing entries from localStorage
-                const entries = JSON.parse(localStorage.getItem('entries')) || [];
-                
-                // Add new entry to the list
-                entries.push(entryInput);
-                
-                // Save updated entries back to localStorage
-                localStorage.setItem('entries', JSON.stringify(entries));
-
-                // Debug logs
-                console.log('Entry saved:', entryInput);
-                console.log('All entries:', entries);
-
-                // Redirect back to the main page (adjust path if needed)
-                window.location.href = 'index.html'; // Change this if necessary
-            } else {
-                console.log('Empty input, not saved.');
-            }
-        });
-    </script>
+        if (entryInput.trim() !== "") {
+            // Send the entry to the server using fetch
+            fetch('/save-entry', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ entry: entryInput }),
+            })
+            .then(response => response.text())
+            .then(data => {
+                console.log(data); // Server response
+                // Redirect to main page after saving
+                window.location.href = 'index.html';
+            })
+            .catch(error => {
+                console.error('Error saving entry:', error);
+            });
+        } else {
+            console.log('Empty input, not saved.');
+        }
+    });
+</script>
 
     <!-- Back button -->
     <a href="gilmoregirls.html" style="margin-top: 10px; padding: 5px 10px; font-size: 30px;">Back</a>
