--- a/your-review.html
+++ b/your-review.html
@@ -50,7 +50,7 @@
             .then(data => {
                 console.log(data); // Server response
                 // Redirect to main page after saving
-                window.location.href = 'index.html';
+                window.location.href = 'gilmoregirls.html';
             })
             .catch(error => {
                 console.error('Error saving entry:', error);
