--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -288,6 +288,43 @@ function showInfo(title, file) {
 }
 </script>
 
+<div class="preserve-line-breaks">
+<h2>Want to leave your own review?</h2>
+<h3></h3>Enter a personalized review down below.
+It'll get saved directly to this page for everyone to see!</h3>
+</div>
+<button onclick="window.location.href='your-review.html'" style="margin-top: 10px; padding: 5px 10px; font-size: 30px;">Create New Entry</button>
+
+    <div id="output">
+        <hr>
+        <h2>Entries:</h2>
+        <ul id="entryList"></ul>
+    </div>
+
+    <script>
+        const form = document.getElementById('entryForm');
+
+        form.addEventListener('submit', function(event) {
+            event.preventDefault(); // Prevent page refresh
+
+            const entryInput = document.getElementById('entryInput').value;
+
+            if (entryInput.trim() !== "") {
+                // Retrieve existing entries from localStorage
+                const entries = JSON.parse(localStorage.getItem('entries')) || [];
+                
+                // Add new entry to the list
+                entries.push(entryInput);
+                
+                // Save updated entries back to localStorage
+                localStorage.setItem('entries', JSON.stringify(entries));
+
+                // Redirect back to the main page
+                window.location.href = 'gilmoregirls.html';
+            }
+        });
+    </script>
+
 </footer>
 </body>
 </html>
