--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -290,7 +290,7 @@ function showInfo(title, file) {
 
 <div class="preserve-line-breaks">
 <h2>Want to leave your own review?</h2>
-<h3></h3>Enter a personalized review down below.
+<h3>Enter a personalized review down below.
 It'll get saved directly to this page for everyone to see!</h3>
 </div>
 <button onclick="window.location.href='your-review.html'" style="margin-top: 10px; padding: 5px 10px; font-size: 30px;">Create New Entry</button>
