--- a/your-review.html
+++ b/your-review.html
@@ -6,9 +6,9 @@
     <title>New Entry</title>
     <style>
         textarea {
-            width: 100%; /* Full width */
-            height: 150px; /* Height for more space */
-            font-size: 16px; /* Comfortable font size */
+            width: 100%;
+            height: 150px;
+            font-size: 16px;
             padding: 10px;
             border: 1px solid #ccc;
             border-radius: 5px;
@@ -22,46 +22,32 @@
     </style>
 </head>
 <body>
-    <h1>New Entry</h1>
+    <h1>New Review Entry</h1>
     <form id="entryForm">
-        <label for="entryInput">Enter your content:</label><br>
+        <label for="entryInput">Enter your review:</label><br>
         <textarea id="entryInput" required></textarea><br>
         <button type="submit">Submit</button>
     </form>
 
     <script>
-    const form = document.getElementById('entryForm');
-
-    form.addEventListener('submit', function (event) {
+    document.getElementById('entryForm').addEventListener('submit', function(event) {
         event.preventDefault(); // Prevent the page refresh
-
         const entryInput = document.getElementById('entryInput').value;
 
         if (entryInput.trim() !== "") {
-            // Send the entry to the server using fetch
-            fetch('/save-entry', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ entry: entryInput }),
-            })
-            .then(response => response.text())
-            .then(data => {
-                console.log(data); // Server response
-                // Redirect to main page after saving
-                window.location.href = 'gilmoregirls.html';
-            })
-            .catch(error => {
-                console.error('Error saving entry:', error);
-            });
-        } else {
-            console.log('Empty input, not saved.');
+            // Retrieve existing entries from localStorage
+            const entries = JSON.parse(localStorage.getItem('entries')) || [];
+            
+            // Add new entry to the list
+            entries.push(entryInput);
+            
+            // Save updated entries back to localStorage
+            localStorage.setItem('entries', JSON.stringify(entries));
+
+            // Redirect to the main page after saving
+            window.location.href = 'gilmoregirls.html';
         }
     });
-</script>
-
-    <!-- Back button -->
-    <a href="gilmoregirls.html" style="margin-top: 10px; padding: 5px 10px; font-size: 30px;">Back</a>
+    </script>
 </body>
 </html>
