--- a/your-review.html
+++ b/your-review.html
@@ -29,9 +29,12 @@
         <button type="submit">Submit</button>
     </form>
 
+    <button id="clearEntries" style="margin-top: 10px; padding: 10px 20px; font-size: 16px;">Clear All Entries</button>
+
     <script>
+    // Submit new review
     document.getElementById('entryForm').addEventListener('submit', function(event) {
-        event.preventDefault(); // Prevent the page refresh
+        event.preventDefault(); // Prevent page refresh
         const entryInput = document.getElementById('entryInput').value;
 
         if (entryInput.trim() !== "") {
@@ -47,6 +50,13 @@
             // Redirect to the main page after saving
             window.location.href = 'gilmoregirls.html';
         }
+    });
+
+    // Clear all entries in localStorage
+    document.getElementById('clearEntries').addEventListener('click', function() {
+        localStorage.removeItem('entries');  // Clear all stored entries
+        alert('All entries have been cleared!'); // Optional confirmation
+        window.location.reload();  // Reload page to reflect the changes
     });
     </script>
 </body>
