--- a/your-review.html
+++ b/your-review.html
@@ -30,15 +30,25 @@
 
     <script>
     document.getElementById('entryForm').addEventListener('submit', function(event) {
-        event.preventDefault(); 
-        const entryInput = document.getElementById('entryInput').value;
-        if (entryInput.trim() !== "") {
-            const entries = JSON.parse(localStorage.getItem('entries')) || [];
-            entries.push(entryInput);
-            localStorage.setItem('entries', JSON.stringify(entries));
-            window.location.href = 'gilmoregirls.html';
-        }
-    });
+    event.preventDefault(); 
+    const entryInput = document.getElementById('entryInput').value;
+    
+    if (entryInput.trim() !== "") {
+        // Get the current page's name from the URL
+        const currentPage = window.location.pathname.split('/').pop().replace('.html', '');
+
+        // Retrieve existing entries for the current page
+        const entries = JSON.parse(localStorage.getItem(currentPage)) || [];
+        entries.push(entryInput);
+
+        // Save entries to localStorage under the current page's key
+        localStorage.setItem(currentPage, JSON.stringify(entries));
+
+        // Redirect or refresh as needed
+        window.location.href = currentPage + '.html';
+    }
+});
+
 
     document.getElementById('clearEntries').addEventListener('click', function() {
         localStorage.removeItem('entries');  
