--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -267,9 +267,9 @@ footer {
    <div id="info-box">
       
       <hr>
-      <h3><strong>Click one of the rows to see more information about my #2 show: Friends!</strong></h3>
+      <h3><strong>Click one of the rows to see more information about my #1 show: Gilmore Girls!</strong></h3>
       <hr>
-      <img src="https://m.media-amazon.com/images/M/MV5BZGY5MTgwOGItN2Q5My00MWZhLTkzMWEtYzEzYTZkNjBmN2RiXkEyXkFqcGdeQXNvbG5vbXM@._V1_QL75_UX500_CR0,0,500,281_.jpg" style="width: 30%;">
+      <img src="https://dnm.nflximg.net/api/v6/BvVbc2Wxr2w6QuoANoSpJKEIWjQ/AAAAQS9vrxnDv94S7MlAI-VMEtjSFNPwsvfUOJyXbpdccmDksqngsHPnNPDACKLPvSEWr_9IwXA96JC5p_PBnkoOWCd4TWVBPCHxVjUYA4TntqG1JC8K5B7RaSt0rA0XTRZhFK1xQQ_47is5_9Pc-J4XI-dtC4A.jpg?r=29d" style="width: 30%;">
    </div>
 
    <script>
