Update and rename your-review.html to gg_your-review.html

--- a/gg_your-review.html
+++ b/gg_your-review.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1>New Review Entry</h1>
+    <h1>New Review Entry for Gilmore Girls</h1>
 <form id="entryForm">
     <label for="entryInput">Enter your review of this show:</label><br>
     <textarea id="entryInput" required></textarea><br>
