--- a/gilmoregirls.html
+++ b/gilmoregirls.html
@@ -303,7 +303,7 @@ function showInfo(title, file) {
 <h3>Enter a personalized review down below.
 It'll get saved directly to this page for everyone to see!</h3>
 </div>
-<button onclick="window.location.href='your-review.html'" style="margin-top: 10px; padding: 5px 10px; font-size: 30px;">Create New Entry</button>
+<button onclick="window.location.href='gg_your-review.html'" style="margin-top: 10px; padding: 5px 10px; font-size: 30px;">Create New Entry</button>
 
     <div id="output">
     <hr>
