--- a/your-review.html
+++ b/your-review.html
@@ -26,13 +26,13 @@
         <option value="Gilmore Girls">Gilmore Girls</option>
         <option value="Friends">Friends</option>
         <option value="How I Met Your Mother">How I Met Your Mother</option>
-        <option value="One Tree Hill">How I Met Your Mother</option>
-        <option value="The Middle">How I Met Your Mother</option>
-        <option value="New Girl">How I Met Your Mother</option>
-        <option value="The Fosters">How I Met Your Mother</option>
-        <option value="Beverly Hills, 90210">How I Met Your Mother</option>
-        <option value="Once Upon A Time">How I Met Your Mother</option>
-        <option value="Heartland">How I Met Your Mother</option>
+        <option value="One Tree Hill">One Tree Hill</option>
+        <option value="The Middle">The Middle</option>
+        <option value="New Girl">New Girl</option>
+        <option value="The Fosters">The Fosters</option>
+        <option value="Beverly Hills, 90210">Beverly Hills, 90210</option>
+        <option value="Once Upon A Time">Once Upon A Time</option>
+        <option value="Heartland">Heartland</option>
     </select><br>
 
     <label for="entryInput">Enter your review:</label><br>
